Fix flash error and image z-index issue making it not display while create edit post

--- a/app/assets/stylesheets/trix_editor.scss
+++ b/app/assets/stylesheets/trix_editor.scss
@@ -2,8 +2,9 @@ trix-editor {
   a {
     text-decoration: underline;
   }
+}
 
-  .attachment {
-    z-index: -1
-  }
+trix-toolbar {
+  z-index: 1;
+  position: relative;
 }
